# go-srl-ndk

./: README.md  go.mod
protos/: README.md  appid_service.proto  bfd_service.proto  config_service.proto  interface_service.proto  lldp_service.proto  mpls_service.proto  networkinstance_service.proto  nexthop_group_service.proto  route_service.proto  rpm.spec.in  sdk_common.proto  sdk_service.proto  setup.py  telemetry_service.proto
protos/doc/: CMakeLists.txt  index.html
